update add facilitiesbug

--- a/new-facility.html
+++ b/new-facility.html
@@ -34,6 +34,7 @@
                  </div>
              </nav>
         </div>
+        <div id="main-content">
 
         <div class="card mb-3">
             <div class="card-header">Load from GeoJSON File</div>
@@ -186,6 +187,7 @@
             <button type="submit" class="btn btn-primary w-100 mb-4">Add Facility</button>
         </form>
     </div>
+        </div> <!-- End main-content -->
 
     <script>
         // --- GeoJSON File Upload Handling ---
