--- a/facilities.html
+++ b/facilities.html
@@ -32,6 +32,12 @@
                             <button class="tab-button" data-filter="planned">Planned</button>
                         </div>
 
+                        <!-- Add Facility Button (Hidden by default, shown by JS if logged in) -->
+                        <div class="text-end mb-3">
+                            <a href="new-facility.html" id="addFacilityBtnPage" class="btn btn-success d-none"><i class="fas fa-plus"></i> Add New Facility</a>
+                        </div>
+
+
                         <div class="input-group mb-3">
                             <span class="input-group-text"><i class="fas fa-search"></i></span>
                             <input type="text" class="form-control" id="facilitySearch" placeholder="Search facilities...">
