--- a/index.html
+++ b/index.html
@@ -44,6 +44,7 @@
                     <div class="map-container" id="map-container">
                         <div id="map"></div>
 
+        <div class="legend">
                             <h6 class="mb-2">Facility Status</h6>
                             <div class="legend-item">
                                 <div class="legend-color" style="background-color: #4CAF50;"></div>
@@ -69,6 +70,7 @@
                             <label class="form-check-label" for="sizeByCapacityToggle" style="font-size: 0.9em;">Size by Capacity</label>
                         </div>
                     </div>
+        </div>
                 </div>
             </div> <!-- End of first row (Map only) -->
 
