--- a/new-facility.html
+++ b/new-facility.html
@@ -49,7 +49,7 @@
 
          <div class="d-flex justify-content-between align-items-center mb-4">
              <h3>Add New Facility Details</h3>
-             <a href="index.html" class="btn btn-outline-secondary"><i class="fas fa-times"></i> Cancel</a>
+             <a href="index.html" id="cancelButtonNew" class="btn btn-outline-secondary"><i class="fas fa-times"></i> Cancel</a>
          </div>
 
         <div id="errorMessage" class="alert alert-danger d-none" role="alert"></div>
@@ -312,6 +312,17 @@
         }
         // --- End Authentication Check ---
 
+
+
+        // --- Cancel Button Navigation ---
+        const cancelButtonNew = document.getElementById('cancelButtonNew');
+        if (cancelButtonNew) {
+            cancelButtonNew.addEventListener('click', function(event) {
+                event.preventDefault(); // Stop the default link behavior
+                window.location.href = 'facilities.html'; // Navigate to the facilities list
+            });
+        }
+        // --- End Cancel Button Navigation ---
 
         document.getElementById('newFacilityForm').addEventListener('submit', async function(event) {
             event.preventDefault();
