fix: Load common.js as module in HTML files

--- a/about.html
+++ b/about.html
@@ -82,7 +82,7 @@
     <!-- <script src="js/about-page.js"></script> -->
 
     <!-- Common JS (Loads Header, Handles Theme/Auth, SPA Routing) -->
-    <script src="js/common.js"></script>
+    <script type="module" src="js/common.js"></script>
 
     <!-- Removed inline script block -->
 
