--- a/charts.html
+++ b/charts.html
@@ -106,7 +106,7 @@
     <!-- Custom Charts Page JS -->
     <script src="js/charts-page.js" data-page-script="true"></script>
     <!-- Common JS (Loads Header, Handles Theme/Auth, SPA Routing) -->
-    <script src="js/common.js"></script>
+    <script type="module" src="js/common.js"></script>
 
     <!-- Removed inline theme and auth scripts -->
 
