--- a/documents.html
+++ b/documents.html
@@ -112,7 +112,7 @@
     <!-- Custom Documents Page JS -->
     <script src="js/documents.js" data-page-script="true"></script> <!-- Link to new JS file -->
     <!-- Common JS (Loads Header, Handles Theme/Auth, SPA Routing) -->
-    <script src="js/common.js"></script>
+    <script type="module" src="js/common.js"></script>
 
     <!-- Removed inline theme and auth scripts -->
 
