--- a/facilities.html
+++ b/facilities.html
@@ -69,7 +69,7 @@
     <!-- Custom Facilities Page JS -->
     <script src="js/facilities-page.js" data-page-script="true"></script>
     <!-- Common JS (Loads Header, Handles Theme/Auth, SPA Routing) -->
-    <script src="js/common.js"></script>
+    <script type="module" src="js/common.js"></script>
 
     <!-- Removed inline theme and auth scripts -->
 
