--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
     <script src="js/dashboard.js" data-page-script="true" defer></script>
 
     <!-- Common JS (Loads Header, Handles Theme/Auth, SPA Routing) -->
-    <script src="js/common.js"></script>
+    <script type="module" src="js/common.js"></script>
 
     <!-- Removed inline script block -->
 
