--- a/index.html
+++ b/index.html
@@ -24,8 +24,13 @@
     <link rel="stylesheet" href="css/styles.css">
 
     <!-- Leaflet JS and MarkerCluster JS will be loaded dynamically by common.js for the map page -->
+
+    <!-- Vue.js and Vue Router -->
+    <script src="https://unpkg.com/vue@3/dist/vue.global.js"></script>
+    <script src="https://unpkg.com/vue-router@4"></script>
 </head>
 <body>
+    <div id="app"> <!-- Main Vue app container -->
     <div class="dashboard-container">
         <!-- Header Placeholder -->
         <div id="header-placeholder"></div>
@@ -86,14 +91,19 @@
     <!-- Chart.js -->
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
     <!-- Page-Specific Dashboard JS -->
-    <script src="js/dashboard.js" data-page-script="true" defer></script>
+    <!-- <script src="js/dashboard.js" data-page-script="true" defer></script> -->
 
-    <!-- Common JS (Loads Header, Handles Theme/Auth, SPA Routing) -->
-    <script type="module" src="js/common.js"></script>
+    <!-- Common JS (Loads Header, Handles Theme/Auth, SPA Routing) - Replaced by Vue app -->
+    <!-- <script type="module" src="js/common.js"></script> -->
 
     <!-- Removed inline script block -->
 
     <!-- Footer Placeholder -->
     <div id="footer-placeholder"></div>
+
+    </div> <!-- Close main Vue app container -->
+
+    <!-- Main Vue App Initialization -->
+    <script type="module" src="js/app.js"></script>
 </body>
 </html>
