--- a/index.html
+++ b/index.html
@@ -31,57 +31,20 @@
 </head>
 <body>
     <div id="app"> <!-- Main Vue app container -->
-    <div class="dashboard-container">
-        <!-- Header Placeholder -->
-        <div id="header-placeholder"></div>
-        <!-- Hidden Subtitle for this page -->
-        <p id="page-subtitle-main" style="display: none;">Interactive Map of Recycling Facilities</p>
+        <header-component></header-component>
 
-        <!-- Main Content Area -->
-        <main id="main-content">
-            <!-- Stats Cards Row REMOVED -->
-
-            <div class="row">
-                <div class="col-12"> <!-- Changed from col-md-8 -->
-                    <div class="map-container" id="map-container">
-                        <div id="map"></div>
-
-        <div class="legend">
-                            <h6 class="mb-2">Facility Status</h6>
-                            <div class="legend-item">
-                                <div class="legend-color" style="background-color: #4CAF50;"></div>
-                                <span>Operating</span>
-                            </div>
-                            <div class="legend-item">
-                                <div class="legend-color" style="background-color: #FFC107;"></div>
-                                <span>Under Construction</span>
-                            </div>
-                            <div class="legend-item">
-                                <div class="legend-color" style="background-color: #2196F3;"></div>
-                                <span>Planned</span>
-                            </div>
-                            <div class="legend-item">
-                                <div class="legend-color" style="background-color: #9C27B0;"></div>
-                                <span>Pilot</span>
-                            </div>
-                            </div>
-                        </div>
-                        <hr style="margin: 8px 0;"> <!-- Separator -->
-                        <div class="form-check form-switch form-check-sm">
-                            <input class="form-check-input" type="checkbox" role="switch" id="sizeByCapacityToggle">
-                            <label class="form-check-label" for="sizeByCapacityToggle" style="font-size: 0.9em;">Size by Capacity</label>
-                        </div>
-                    </div>
-        </div>
-                </div>
-            </div> <!-- End of first row (Map only) -->
-
-            <!-- Facilities List Row REMOVED -->
-
-            <!-- Charts Row REMOVED -->
-        </main> <!-- End Main Content Area -->
-
-    </div> <!-- End dashboard-container -->
+        <!-- Main Content Area Rendered by Vue Router -->
+        <!-- Added dashboard-container class here for consistent padding/margins -->
+        <main class="flex-grow-1 dashboard-container py-4">
+             <router-view v-slot="{ Component }">
+               <transition name="fade" mode="out-in">
+                 <component :is="Component" />
+               </transition>
+             </router-view>
+        </main>
+        <!-- Footer Component -->
+        <footer-component></footer-component>
+    <!-- </div> End dashboard-container --> <!-- This div is removed as structure changes -->
 
     <!-- Bootstrap JS -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"></script>
@@ -98,8 +61,8 @@
 
     <!-- Removed inline script block -->
 
-    <!-- Footer Placeholder -->
-    <div id="footer-placeholder"></div>
+    <!-- Footer Placeholder Removed -->
+    <!-- <div id="footer-placeholder"></div> -->
 
     </div> <!-- Close main Vue app container -->
 
