--- a/index.html
+++ b/index.html
@@ -23,7 +23,11 @@
     <!-- Custom CSS -->
     <link rel="stylesheet" href="css/styles.css">
 
-    <!-- Leaflet JS and MarkerCluster JS will be loaded dynamically by common.js for the map page -->
+    <!-- Leaflet JS and MarkerCluster JS -->
+    <script src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js"
+            integrity="sha256-20nQCchB9co0qIjJZRGuk2/Z9VM+kNiyxNV1lvTlZBo="
+            crossorigin="" defer></script>
+    <script src="https://unpkg.com/leaflet.markercluster@1.4.1/dist/leaflet.markercluster.js" defer></script>
 
     <!-- Vue.js and Vue Router -->
     <script src="https://unpkg.com/vue@3/dist/vue.global.js"></script>
@@ -46,13 +50,7 @@
         <footer-component></footer-component>
     <!-- </div> End dashboard-container --> <!-- This div is removed as structure changes -->
 
-    <!-- Bootstrap JS -->
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"></script>
-
-    <!-- Leaflet JS and MarkerCluster JS moved to <head> with defer -->
-
-    <!-- Chart.js -->
-    <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
+    <!-- Bootstrap JS & Chart.js moved below -->
     <!-- Page-Specific Dashboard JS -->
     <!-- <script src="js/dashboard.js" data-page-script="true" defer></script> -->
 
@@ -68,5 +66,8 @@
 
     <!-- Main Vue App Initialization -->
     <script type="module" src="js/app.js"></script>
+    <!-- Other external scripts loaded AFTER Vue app div and Vue app initialization -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
 </body>
 </html>
