revert: Remove app.js loading from non-index HTML pages

--- a/charts.html
+++ b/charts.html
@@ -106,7 +106,9 @@
     <!-- Custom Charts Page JS -->
     <script src="js/charts-page.js" data-page-script="true"></script>
     <!-- Common JS (Loads Header, Handles Theme/Auth, SPA Routing) -->
-    <script type="module" src="js/common.js"></script>
+    <!-- <script type="module" src="js/common.js"></script> --> <!-- Replaced by Vue app -->
+    <!-- Main Vue App Initialization is handled by index.html -->
+    <script type="module" src="js/app.js" defer></script>
 
     <!-- Removed inline theme and auth scripts -->
 
