--- a/facilities.html
+++ b/facilities.html
@@ -69,7 +69,9 @@
     <!-- Custom Facilities Page JS -->
     <script src="js/facilities-page.js" data-page-script="true"></script>
     <!-- Common JS (Loads Header, Handles Theme/Auth, SPA Routing) -->
-    <script type="module" src="js/common.js"></script>
+    <!-- <script type="module" src="js/common.js"></script> --> <!-- Replaced by Vue app -->
+    
+    <!-- Main Vue App Initialization is handled by index.html -->
 
     <!-- Removed inline theme and auth scripts -->
 
