--- a/about.html
+++ b/about.html
@@ -82,7 +82,9 @@
     <!-- <script src="js/about-page.js"></script> -->
 
     <!-- Common JS (Loads Header, Handles Theme/Auth, SPA Routing) -->
-    <script type="module" src="js/common.js"></script>
+    <!-- <script type="module" src="js/common.js"></script> --> <!-- Replaced by Vue app -->
+    <!-- Main Vue App Initialization is handled by index.html -->
+    <script type="module" src="js/app.js" defer></script>
 
     <!-- Removed inline script block -->
 
