--- a/documents.html
+++ b/documents.html
@@ -112,7 +112,9 @@
     <!-- Custom Documents Page JS -->
     <script src="js/documents.js" data-page-script="true"></script> <!-- Link to new JS file -->
     <!-- Common JS (Loads Header, Handles Theme/Auth, SPA Routing) -->
-    <script type="module" src="js/common.js"></script>
+    <!-- <script type="module" src="js/common.js"></script> --> <!-- Replaced by Vue app -->
+    <!-- Main Vue App Initialization is handled by index.html -->
+    <script type="module" src="js/app.js" defer></script>
 
     <!-- Removed inline theme and auth scripts -->
 
