fix vue page loading

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
 
     <!-- Custom CSS -->
-    <link rel="stylesheet" href="css/styles.css">
+    <link rel="stylesheet" href="/css/styles.css">
 
     <!-- Leaflet JS and MarkerCluster JS -->
     <script src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js"
@@ -40,11 +40,7 @@
         <!-- Main Content Area Rendered by Vue Router -->
         <!-- Added dashboard-container class here for consistent padding/margins -->
         <main class="flex-grow-1 dashboard-container py-4">
-             <router-view v-slot="{ Component }">
-               <transition name="fade" mode="out-in">
-                 <component :is="Component" />
-               </transition>
-             </router-view>
+             <router-view></router-view>
         </main>
         <!-- Footer Component -->
         <footer-component></footer-component>
@@ -65,7 +61,7 @@
     </div> <!-- Close main Vue app container -->
 
     <!-- Main Vue App Initialization -->
-    <script type="module" src="js/app.js"></script>
+    <script type="module" src="/js/app.js"></script>
     <!-- Other external scripts loaded AFTER Vue app div and Vue app initialization -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
