--- a/index.html
+++ b/index.html
@@ -8,14 +8,7 @@
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet">
 
-    <!-- Leaflet CSS -->
-    <link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css"
-          integrity="sha256-p4NxAoJBhIIN+hmNHrzRCf9tD/miZyoHS5obTRR9BMY="
-          crossorigin=""/>
-
-    <!-- Leaflet MarkerCluster CSS -->
-    <link rel="stylesheet" href="https://unpkg.com/leaflet.markercluster@1.4.1/dist/MarkerCluster.css" />
-    <link rel="stylesheet" href="https://unpkg.com/leaflet.markercluster@1.4.1/dist/MarkerCluster.Default.css" />
+    <!-- Leaflet CSS is now imported via JS -->
 
     <!-- Font Awesome -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
@@ -23,15 +16,7 @@
     <!-- Custom CSS -->
     <link rel="stylesheet" href="/css/styles.css">
 
-    <!-- Leaflet JS and MarkerCluster JS -->
-    <script src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js"
-            integrity="sha256-20nQCchB9co0qIjJZRGuk2/Z9VM+kNiyxNV1lvTlZBo="
-            crossorigin="" defer></script>
-    <script src="https://unpkg.com/leaflet.markercluster@1.4.1/dist/leaflet.markercluster.js" defer></script>
-
-    <!-- Vue.js and Vue Router -->
-    <script src="https://unpkg.com/vue@3/dist/vue.global.js"></script>
-    <script src="https://unpkg.com/vue-router@4"></script>
+    <!-- Leaflet, Vue, Vue Router JS are now imported via JS -->
 </head>
 <body>
     <div id="app"> <!-- Main Vue app container -->
@@ -47,11 +32,7 @@
     <!-- </div> End dashboard-container --> <!-- This div is removed as structure changes -->
 
     <!-- Bootstrap JS & Chart.js moved below -->
-    <!-- Page-Specific Dashboard JS -->
-    <!-- <script src="js/dashboard.js" data-page-script="true" defer></script> -->
-
-    <!-- Common JS (Loads Header, Handles Theme/Auth, SPA Routing) - Replaced by Vue app -->
-    <!-- <script type="module" src="js/common.js"></script> -->
+    <!-- Legacy dashboard.js and common.js removed -->
 
     <!-- Removed inline script block -->
 
@@ -61,9 +42,9 @@
     </div> <!-- Close main Vue app container -->
 
     <!-- Main Vue App Initialization -->
-    <script type="module" src="/js/app.js"></script>
+    <script type="module" src="/src/main.js"></script>
     <!-- Other external scripts loaded AFTER Vue app div and Vue app initialization -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
+    <!-- Chart.js is now imported via JS -->
 </body>
 </html>
