--- a/index.html
+++ b/index.html
@@ -8,15 +8,14 @@
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet">
 
-    <!-- Leaflet CSS is now imported via JS -->
-
+    <!-- Leaflet CSS (Imported via JS/Vue components) -->
     <!-- Font Awesome -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
 
     <!-- Custom CSS -->
     <link rel="stylesheet" href="/css/styles.css">
 
-    <!-- Leaflet, Vue, Vue Router JS are now imported via JS -->
+    <!-- Core JS libraries (Vue, Vue Router, Leaflet, Chart.js) are imported via main.js -->
 </head>
 <body>
     <div id="app"> <!-- Main Vue app container -->
@@ -29,15 +28,7 @@
         </main>
         <!-- Footer Component -->
         <footer-component></footer-component>
-    <!-- </div> End dashboard-container --> <!-- This div is removed as structure changes -->
-
-    <!-- Bootstrap JS & Chart.js moved below -->
-    <!-- Legacy dashboard.js and common.js removed -->
-
-    <!-- Removed inline script block -->
-
-    <!-- Footer Placeholder Removed -->
-    <!-- <div id="footer-placeholder"></div> -->
+    <!-- End Main Content Area -->
 
     </div> <!-- Close main Vue app container -->
 
@@ -45,6 +36,6 @@
     <script type="module" src="/src/main.js"></script>
     <!-- Other external scripts loaded AFTER Vue app div and Vue app initialization -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"></script>
-    <!-- Chart.js is now imported via JS -->
+    <!-- Chart.js (Imported via JS/Vue components) -->
 </body>
 </html>
